--- a/SupplementaryFiles/light_style.css
+++ b/SupplementaryFiles/light_style.css
@@ -1,5 +1,5 @@
 :root{
-  --accent-color: #52bdff;
+  --accent-color: #8883f2;
   --background-color: #f5f5f5;
 }
 body {
@@ -19,6 +19,7 @@ body {
   left:0;
   width: 100%;
   font-size: 30px;
+  z-index: 9999;
 }
 
 .navbar a {
@@ -42,13 +43,16 @@ body {
   width: 300px;
   padding-right: 20px;
   padding-top: 10px;
+  -webkit-filter: drop-shadow(5px 5px 5px #5c5c5c);
+  filter: drop-shadow(5px 5px 5px #5c5c5c);
 }
 
 .main img:hover{
   width: 305px;
   padding-right: 15px;
   padding-top: 0px;
-  filter:brightness(0.9);
+  -webkit-filter: drop-shadow(7px 7px 7px #5c5c5c);
+  filter: drop-shadow(7px 7px 7px #5c5c5c) brightness(1.0);
 }
 
 .intro{
