--- a/SupplementaryFiles/light_style.css
+++ b/SupplementaryFiles/light_style.css
@@ -20,23 +20,28 @@ body {
   width: 100%;
   font-size: 30px;
   z-index: 9999;
+  -webkit-filter: drop-shadow(1px 1px 1px #5c5c5c);
+  filter: drop-shadow(1px 1px 1px #5c5c5c);
 }
 
 .navbar a {
   display: block;
   color: inherit;
-  text-align: center;
-  padding: 14px 16px;
-
+  /* text-align: center; */
+  margin-left: 50px;
+  margin-right: 50px;
   text-decoration: none;
 }
 .navbar a:hover {
-  background-color:rgba(0,0,0,0.1);
+  /* background-color:rgba(0,0,0,0.1); */
+  color: rgba(0,0,0,0.3)
 }
 .main {
   margin-left: 100px;
   margin-right:100px;
+  margin-top: 100px;
   text-align: center;
+  font-family: 'Trebuchet MS';
 }
 
 .main img {
@@ -61,6 +66,66 @@ body {
   margin-left: 100px;
   margin-right:100px;
   color: var(--accent-color);
+}
+
+.project_intro {
+  margin-left: 0px;
+  margin-right:100px;
+  margin-top: 60px;
+  text-align: center;
+  font-family: 'Trebuchet MS';
+  /* background-color: var(--accent-color); */
+  top: 0;
+  left:0;
+  width: 100%;
+  /* color: var(--background-color) */
+  color: #676a88
+}
+
+.project_main{
+  margin-top: 100px;
+  text-align: center;
+  font-family: 'Trebuchet MS';
+  width: 100%;
+  /* margin-left:0px; */
+  text-align: left;
+  font-size: 150%;
+
+}
+.alt1 h3{
+  margin-left: 20%;
+  margin-right: 30%;
+  filter: brightness(0.75);
+  display: flex;
+}
+.alt1 p{
+  margin-left: 20%;
+  margin-right: 35%
+}
+.alt1 img{
+  float:right;
+  padding-left: 10%;
+  width: 12%;
+  display: inline;
+  margin-top: 0;
+}
+
+.alt2 h3{
+  margin-left: 50%;
+  margin-right: 15%;
+  filter: brightness(0.75);
+  display: flex;
+}
+.alt2 p{
+  margin-left: 50%;
+  margin-right: 15%;
+}
+.alt2 img{
+  float:left;
+  padding-left: 10%;
+  width: 12%;
+  display: inline;
+  margin-top: auto;
 }
 
 .end{
