--- a/SupplementaryFiles/light_style.css
+++ b/SupplementaryFiles/light_style.css
@@ -83,7 +83,7 @@ body {
 }
 
 .project_main{
-  margin-top: 100px;
+  /* margin-top: 100px; */
   text-align: center;
   font-family: 'Trebuchet MS';
   width: 100%;
@@ -111,13 +111,13 @@ body {
 }
 
 .alt2 h3{
-  margin-left: 50%;
+  margin-left: 45%;
   margin-right: 15%;
   filter: brightness(0.75);
   display: flex;
 }
 .alt2 p{
-  margin-left: 50%;
+  margin-left: 45%;
   margin-right: 15%;
 }
 .alt2 img{
