--- a/SupplementaryFiles/light_style.css
+++ b/SupplementaryFiles/light_style.css
@@ -31,6 +31,8 @@ body {
   margin-left: 50px;
   margin-right: 50px;
   text-decoration: none;
+
+  transition: color 0.4s ease;
 }
 .navbar a:hover {
   /* background-color:rgba(0,0,0,0.1); */
@@ -50,6 +52,7 @@ body {
   padding-top: 10px;
   -webkit-filter: drop-shadow(5px 5px 5px #5c5c5c);
   filter: drop-shadow(5px 5px 5px #5c5c5c);
+  transition: 0.4s ease;
 }
 
 .main img:hover{
