--- a/SupplementaryFiles/light_style.css
+++ b/SupplementaryFiles/light_style.css
@@ -43,7 +43,7 @@ body {
   margin-right:100px;
   margin-top: 100px;
   text-align: center;
-  font-family: 'Trebuchet MS';
+  /* font-family: 'Trebuchet MS'; */
 }
 
 .main img {
